# vibrant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  attributes.xml  documentation.xml  tutorial.txt  tutorial.xml  tutorial_scene.xml  vcpkg.json
assets/: combine_fragment.glsl  deferred.frag  deferred.vert  deferred_fragment.glsl  deferred_vertex.glsl  frag.glsl  sprite.frag  sprite.vert  vert.glsl
include/: core.h  description.h  docs.h  helpers.h  light.h  log.h  object.h  opengl_objects.h  scene.h  texture.h  transform.h  tutorial.h
src/: core.cc  description.cc  docs.cc  helpers.cc  main.cc  object.cc  scene.cc  tutorial.cc
